# fast_channels

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
scripts/: generate_grpc.py
src/: __init__.py  cli.py
src/core/: __init__.py  config.py  logging.py
src/schemas/: __init__.py  commands.py  entities.py  internal.py
src/schemas/proto/: __init__.py  action.proto  action_pb2.py  action_pb2_grpc.py  echo.proto  echo_pb2.py  echo_pb2_grpc.py
src/schemas/proto/transforms/: __init__.py  action.py  base.py
src/transport/: __init__.py  consumers.py  grpc.py  http.py  producers.py  serve.py
src/usecases/: action.py  echo.py
