[project]
name = "fast_channels"
version = "0.1.0"
description = "FastAPI + FastStream (Kafka, RabbitMQ) + gRPC experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]>=0.32.0",
    "faststream[rabbit,kafka]>=0.5.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "loguru>=0.7.0",
    "fire>=0.7.0",
    "orjson>=3.10.0",
    "pydantic-settings>=2.0.0",
    "supervisor>=4.2.0",
    "pyjwt>=2.8.0",
    "requests>=2.32.5",
    "opentelemetry-api>=1.39.1",
    "ruff>=0.15.2",
    "mypy>=1.19.1",
    "starlette>=0.52.1",
]

[project.scripts]
# tooling
cli = "src.cli:main"

# transports
http = "src.transport.serve:http"
rpc = "src.transport.serve:rpc"
rabbit = "src.transport.serve:rabbit"
kafka = "src.transport.serve:kafka"

# run all transports (supervisord)
all = "src.transport.serve:run_all"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.78.1",
    "mypy-protobuf>=5.0.0",
    "ruff>=0.15.2",
    "types-protobuf>=6.32.1.20260221",
    "types-requests>=2.32.4.20260107",
]
